--- a/app/build.gradle
+++ b/app/build.gradle
@@ -11,7 +11,7 @@ android {
         minSdk 21
         targetSdk 33
         versionCode 2
-        versionName '2.23.5.31'
+        versionName 'Dev 2.23.6.3'
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
