--- a/app/build.gradle
+++ b/app/build.gradle
@@ -41,6 +41,7 @@ dependencies {
     implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
     implementation 'androidx.room:room-runtime:2.5.1'
     implementation 'cn.hutool:hutool-all:5.8.16'
+    implementation 'com.tencent.bugly:crashreport:latest.release'
     annotationProcessor 'androidx.room:room-compiler:2.5.1'
     implementation 'com.github.bumptech.glide:glide:4.12.0'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.12.0'
