--- a/app/build.gradle
+++ b/app/build.gradle
@@ -11,7 +11,7 @@ android {
         minSdk 21
         targetSdk 33
         versionCode 2
-        versionName 'Dev 2.23.6.25'
+        versionName 'V2.23.6.27_D'
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
